--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "pruebamodulo6",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "start": "node_modules\\.bin\\nodemon.cmd --ignore '/*.json'"
+    "test": "mocha",
+    "dev-unix": "nodemon --ignore '*.json'",
+    "dev-win": "nodemon.cmd --ignore '*.json'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "chai": "^4.3.7",
     "chai-http": "^4.4.0",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.0",
     "mocha": "^10.2.0",
     "uuid": "^9.0.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "description": ""
 }
